--- a/FaceRecognitionEmojiKeyboard/app/build.gradle
+++ b/FaceRecognitionEmojiKeyboard/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
@@ -24,4 +28,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compile 'me.aflak.libraries:ezcam:2.3.3'
+    implementation 'com.karumi:dexter:5.0.0'
+
 }
