--- a/FaceRecognitionEmojiKeyboard/app/src/main/AndroidManifest.xml
+++ b/FaceRecognitionEmojiKeyboard/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name=
+        "android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature android:name=
+        "android.hardware.camera" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -20,5 +24,13 @@
             <action android:name="android.view.InputMethod" />
         </intent-filter>
     </service>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 </manifest>
