--- a/FaceRecognitionEmojiKeyboard/app/build.gradle
+++ b/FaceRecognitionEmojiKeyboard/app/build.gradle
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.microsoft.projectoxford:face:1.4.3'
     testImplementation 'junit:junit:4.12'
@@ -31,5 +31,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile 'me.aflak.libraries:ezcam:2.3.3'
     implementation 'com.karumi:dexter:5.0.0'
-
 }
